--- a/full-counter-app/package.json
+++ b/full-counter-app/package.json
@@ -2,7 +2,7 @@
   "name": "full-counter-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "dependencies": {
     "express": "^4.17.1"
   },
@@ -13,9 +13,10 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
+    "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "davidshur",
   "license": "ISC"
 }
