--- a/full-counter-app/client/package.json
+++ b/full-counter-app/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-with-hooks",
+  "name": "full-counter-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
