--- a/full-counter-app/package.json
+++ b/full-counter-app/package.json
@@ -9,10 +9,13 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
+    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
     "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
