--- a/full-counter-app/backend/package.json
+++ b/full-counter-app/backend/package.json
@@ -15,7 +15,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
+    "dev": "concurrently \"npm start\" \"cd ../frontend && npm start\"",
     "start": "nodemon index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
