--- a/full-counter-app/backend/package.json
+++ b/full-counter-app/backend/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.ts",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongodb": "^3.6.7",
     "@types/node": "^14.14.22",
     "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
